# octree-visualiser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/application/: application.hpp
include/common/: constant.hpp
include/engine/: engine.hpp
include/engine/camera/: camera.hpp  direction.hpp
include/engine/entity/: aabb.hpp  sphere.hpp  topology.hpp
include/engine/model/: mesh.hpp  vertex.hpp
include/engine/octree/: node.hpp  octree.hpp
include/engine/shader/: shader.hpp
include/logger/: entry.hpp  logger.hpp  logger_macros.hpp  severity.hpp
include/manager/: manager.hpp  shader_manager.hpp
include/utility/: colour_utility.hpp  datetime_utility.hpp  file_utility.hpp  math_utility.hpp
resources/shaders/: scene.frag  scene.vert  sphere.frag  sphere.vert
scripts/: install.sh  run.sh
src/: main.cpp
src/application/: application.cpp
src/engine/: engine.cpp
src/engine/camera/: camera.cpp
src/engine/entity/: aabb.cpp  sphere.cpp
src/engine/model/: mesh.cpp
src/engine/octree/: node.cpp  octree.cpp
src/engine/shader/: shader.cpp
src/logger/: entry.cpp  logger.cpp
src/manager/: manager.cpp  shader_manager.cpp
src/utility/: colour_utility.cpp  datetime_utility.cpp  file_utility.cpp  math_utility.cpp
